# verity-txline

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
admin/: .gitignore  README.md  package.json
admin/src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
admin/src/components/: BalancesCard.tsx  CategoriesTab.tsx  CouponsTab.tsx  CreateMarketDrawer.tsx  LoginPanel.tsx  MarketsAdmin.tsx  MarketsTable.tsx  MetricsTab.tsx  MissionsTab.tsx  ResolveMarketDrawer.tsx  SlateBuilderTab.tsx  UserActivityBarChart.tsx  VolumeLineChart.tsx  WorldCupTab.tsx
admin/src/lib/: marketTypes.ts
admin/src/store/: apiClient.ts
backend/: .env.example  .gitignore  README.md  package.json
backend/src/: app.module.ts  main.ts
backend/test/: admin.guard.spec.ts  agent.service.spec.ts  app.controller.spec.ts  auth.service.spec.ts  blockchain.service.spec.ts  markets.service.spec.ts  marketskeeper.service.spec.ts  missions.service.spec.ts  posts.service.spec.ts  pvp.service.spec.ts  royalty.service.spec.ts  users.service.spec.ts
frontend/: .env.example  .gitignore  AGENTS.md  README.md  eslint.config.mjs  package.json  vercel.json
frontend/src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  (+3 more)
solana/: .gitignore  Anchor.toml  README.md  package.json
solana/migrations/: deploy.ts
solana/programs/mock-txline/: Cargo.toml
solana/programs/mock-txline/src/: lib.rs
solana/programs/verity-worldcup/: Cargo.toml
solana/programs/verity-worldcup/src/: errors.rs  lib.rs  state.rs  txline_cpi.rs
solana/tests/: verity-worldcup.ts
(+185 files in other folders)
