[package]
name = "verity-worldcup"
version = "0.1.0"
description = "Verity World Cup parimutuel settlement engine — resolves via CPI into TxLINE validate_stat"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verity_worldcup"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Points the settlement CPI at the local mock-txline program id instead of the
# real TxLINE devnet program, for deterministic offline `anchor test`.
localnet = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
